[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/Visual/botones/anterior.png" type="Texture" id=1]
[ext_resource path="res://Assets/Visual/chars/player/boy/charPlayer.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/nunito/Nunito-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Visual/logo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Visual/botones/large.png" type="Texture" id=6]
[ext_resource path="res://Assets/Visual/botones/next.png" type="Texture" id=7]
[ext_resource path="res://Assets/Visual/botones/whitecircle.png" type="Texture" id=8]
[ext_resource path="res://Scrips/UI/avatar_select.gd" type="Script" id=9]
[ext_resource path="res://Assets/Visual/chars/player/girl/charGirl.png" type="Texture" id=10]
[ext_resource path="res://Assets/Visual/botones/anterior2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Visual/botones/siguiente.png" type="Texture" id=12]
[ext_resource path="res://Assets/Visual/botones/anterior1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Visual/botones/siguiente3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Visual/botones/siguiente1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Visual/botones/largeh.png" type="Texture" id=16]
[ext_resource path="res://Assets/Visual/botones/largeL.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=8]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 1000, 250 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 1000, 250 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1000, 250 )

[sub_resource type="DynamicFont" id=10]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 1024, 1024 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 1024, 1024 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1024, 1024 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 1024, 1024 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 1024, 1024 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 512, 512 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 1024, 1024 )

[node name="OnboardingAvatar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
avatar_textures = [ ExtResource( 2 ), ExtResource( 10 ) ]

[node name="logo" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -159.0
margin_top = 5.0
margin_right = -9.0
margin_bottom = 155.0
rect_min_size = Vector2( 95, 95 )
texture = ExtResource( 4 )
expand = true

[node name="RegistrarButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -800.0
margin_top = -90.0
margin_right = -500.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
text = "Confirmar"

[node name="Steps" type="VBoxContainer" parent="."]
margin_top = 265.0
margin_right = 36.0
margin_bottom = 431.0

[node name="step1" type="TextureRect" parent="Steps"]
margin_right = 36.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 8 )
expand = true

[node name="step2" type="TextureRect" parent="Steps"]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 64.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 8 )
expand = true

[node name="step3" type="TextureRect" parent="Steps"]
margin_top = 68.0
margin_right = 36.0
margin_bottom = 98.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 8 )
expand = true

[node name="step4" type="TextureRect" parent="Steps"]
margin_top = 102.0
margin_right = 36.0
margin_bottom = 132.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 8 )
expand = true

[node name="step5" type="TextureRect" parent="Steps"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 136.0
margin_right = 36.0
margin_bottom = 166.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 8 )
expand = true

[node name="CenterVBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -480.0
margin_right = 480.0
margin_bottom = 590.0
custom_constants/separation = 35

[node name="TitleLabel" type="Label" parent="CenterVBox"]
margin_right = 960.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 10 )
text = "Selecciona un personaje"
align = 1

[node name="AvatarHBox" type="HBoxContainer" parent="CenterVBox"]
margin_top = 97.0
margin_right = 960.0
margin_bottom = 597.0
custom_constants/separation = 25
alignment = 1

[node name="LeftButton" type="Button" parent="CenterVBox/AvatarHBox"]
margin_top = 160.0
margin_right = 180.0
margin_bottom = 340.0
rect_min_size = Vector2( 180, 180 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
action_mode = 0
align = 0

[node name="AvatarTexture" type="TextureRect" parent="CenterVBox/AvatarHBox"]
margin_left = 205.0
margin_right = 755.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="RightButton" type="Button" parent="CenterVBox/AvatarHBox"]
margin_left = 780.0
margin_top = 160.0
margin_right = 960.0
margin_bottom = 340.0
rect_min_size = Vector2( 180, 180 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 16 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
action_mode = 0
align = 2
